для демонстрации добавил результаты вводимых полей в json строку, вывожу в консоли
- поправил сборку

--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-pngquant": "^9.0.2",
     "lodash.template": "^4.5.0",
-    "merge-stream": "^2.0.0",
     "node-sass": "^4.14.0",
     "proxy-polyfill": "^0.3.1",
     "stylelint": "^13.6.1",
@@ -48,10 +47,5 @@
     "webpack": "^5.30.0",
     "webpack-stream": "^6.1.2"
   },
-  "dependencies": {
-    "lg-zoom.js": "^1.3.0",
-    "lightgallery.js": "^1.4.0",
-    "swiper": "^6.5.3",
-    "vanilla-lazyload": "^17.3.1"
-  }
+  "dependencies": {}
 }
